--- a/client/src/cssModules/Allposts.module.css
+++ b/client/src/cssModules/Allposts.module.css
@@ -3,15 +3,40 @@
     margin: 0px;
 }
 
-.MainDiv {
-    width: 100%;
-}
-
 .Container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
+    flex-wrap: wrap;
     align-items: center;
     max-width: 90%;
     margin: 0 auto;
+    border: 5px solid black;
+    width: 30%;
+    height: 30vh;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    background-color: #B38372;
+}
+
+.H1 {
+    border-bottom: 1px solid black;
+    min-width: 90%;
+    padding-bottom: 10px;
+    
+
+}
+
+.Link {
+    border: 3px solid black;
+    text-decoration: none;
+    width: 20%;
+    padding: 5px;
+    color: black;
+    background-color: #84B3A8;
+}
+
+.Button {
+    padding: 5px;
+    background-color: #FFE1D6;
 }
