--- a/client/src/cssModules/Header.module.css
+++ b/client/src/cssModules/Header.module.css
@@ -9,11 +9,22 @@
 
 .Container {
     padding: 20px;
-    background-color: aquamarine;
+    background-color: #D5FFF6;
     margin: 0 auto;
     min-width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    border-bottom: 2px solid black;
+}
+
+.H2 {
+    border: 2px solid black;
+    padding: 5px;
+    background-color: #84B3A8;
+}
+
+.H2:hover{
+    cursor: pointer;
 }
